[package]
name = "bp-test1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "1.2.3"
curve25519-dalek-ng = "4.1.1"
bulletproofs = "4.0.0"
merlin = "3.0.0"
rand = "0.8.4"
hex = "0.4"
ansi_term = "0.11.0"
wasm-bindgen = "0.2"


[dev-dependencies]
wasm-bindgen-test = "0.2"
